@@ -1,6 +1,7 @@
 7/31/2013
 ---------------------------
 - KO Fixed #465 (Zooming in with scroll wheel should center)
+- KO Fixed #517 (new layers don't have properties panel)
 
 7/27/2013
 ---------------------------
